# finance-tracker

./: .env.example  .gitignore  Dockerfile  README.md  async_basics.py  datatypes.py  docker-compose.yml  gradio_app.py  langchain_basics.py  langgraph_basics.py  logger.py  loops.py  models.py  prompt_engineering.py  pyproject.toml  requirements.txt  run.py  transactions.json
app/: config.py  crud.py  database.py  dependencies.py  health.py  main.py  models.py  schemas.py  starter.py
app/ai/: __init__.py  langchain_basics.py  langgraph_basics.py
app/config/: database_config.py  langsmith_config.py  logging_config.py  settings.py
app/constants/: __init__.py  app_constants.py
app/crud/: categories.py  transactions.py
app/exceptions/: app_exceptions.py  finance_exceptions.py  handlers.py  init.py
app/models/: __init__.py  category.py  transaction.py
app/prompts/: __init__.py  base_prompt.py  finance_prompts.py
app/repository/: __init__.py  base_repository.py  category_repository.py  transaction_repository.py
app/routers/: categories.py  transactions.py
app/routes/: ai_routes.py  base_router.py  categories.py  eval_routes.py  transactions.py
app/schemas/: __init__.py  ai_schema.py  category_schema.py  transaction_schema.py  types.py
app/services/: __init__.py  ai_service.py  base_service.py  category_service.py  transaction_service.py
app/tests/: test_categories.py  test_models.py  test_transactions.py
app/ui/: main.py
config/: logging_config.py
learning/: file_handling.py  models.py
tests/: conftest.py
ui/: gradio_app.py
(+43 files in other folders)
